fixed markdown formatting error

--- a/4.1-testing-and-modules.md
+++ b/4.1-testing-and-modules.md
@@ -13,15 +13,23 @@ There's a clause in a lot of python files like this: `if __name__ == "__main__':
 ## Recursion
 
 Iteration is seperating a large task out into many smaller tasks that all require a similar or identical process to complete, and then condensing that task into a relatively very short set of instructions for the computer to perform. For instance, when calculating 5 factorial `5!` we can use iteration to split it into two tasks: calculating 4 factorial, and calculating 5 times that number, `5 * 4!`. And we can keep splitting it off like that,  `5 * 4 * 3!` etc., until we have a singular identical step we can have the computer run 5 times and get our answer something like this:
-`i = 5`
-`currentStep = 1`
-`totalVariable = 1`
-`while currentStep is <= i:`
-    `set totalVariable to totalVariable times current step`
-    `set currentStep to currentStep + 1`
+
+```
+i = 5
+currentStep = 1
+totalVariable = 1
+while currentStep is <= i:
+    set totalVariable to totalVariable times current step
+    set currentStep to currentStep + 1
+```
+
 Recursion is when we instead use our function to call itself to repeat the next step; For example:
-`function factorial(int i):`
-    `if i = 1:`
-        `return 1`
-    `return i * factorial(i - 1)`
+
+```
+function factorial(int i):
+    if i = 1:
+        return 1
+    return i * factorial(i - 1)
+```
+
 Instead of explicitly telling the function how many times to loop, it just keeps invoking itself naturally, until it hits one and doesn't have to call itself anymore, because `1!` equals 1. Then all of the factorial functions return their values back down the **stack** and multiply together. The **stack** refers to the chain of seperate running instances of this function, which is each waiting on the next one in line to give it a response so it can pass along its own response to the one previous.
