reading 38: react 2 actually added this time lol

--- a/4.1-react-1.md
+++ b/4.1-react-1.md
@@ -1,4 +1,4 @@
-# React
+# React part 1
 
 React is a javascript library which has a lot of packaged features which make creating sites easier. Instead of using html, the webpage can be directly manipulated through javascript. This is becuase the html page is actually stored as an object in javascript; through something called *DOM manipulation* the object can be directly edited. This allows more control over the webpage than plain html because it allows things like conditional rendering, adding html elements modularly, etc. Html is not a programming language so it does not have these capabilities by default.
 
